Preso for Sphere.It

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 					Use Cases
 					<ul>
 						<li>Audit log of user actions used by customer service</li>
-						<li>Realtime fraud detection with event-driven ML-based risk scoring model</li>
+						<li>Real-time fraud detection with event-driven ML-based risk scoring model</li>
 						<li>Automatic real-time FX risk hedging</li>
 						<li>Real-time PnL</li>
 						<li>Automated marketing campaigns, promotions</li>
