Preso for Sphere.It

--- a/index.html
+++ b/index.html
@@ -280,10 +280,11 @@
 					</ul>
 				</section>
 				<section>
-					<p>TypedEvents</p>
+					<p>Schema Versioning</p>
 					<ul>
-						<li>ModelCreatedEvent -> TransactionCreatedEvent</li>
-						<li>JVM Focused</li>
+						<li>Backward compatibility</li>
+						<li>Testing</li>
+						<li>Migration</li>
 					</ul>
 				</section>
 				<section>
